--- a/Alsync.Api.V2/Properties/launchSettings.json
+++ b/Alsync.Api.V2/Properties/launchSettings.json
@@ -1,9 +1,10 @@
-{
+﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": false, 
+    "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:2617/",
+      "applicationUrl": "http://localhost:4669",
       "sslPort": 0
     }
   },
@@ -11,17 +12,19 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Alsync.Api": {
+    "Alsync.Api.V2": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/values",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:2618/"
+      }
     }
   }
 }
