--- a/Alsync.Infrastructure/Alsync.Infrastructure.csproj
+++ b/Alsync.Infrastructure/Alsync.Infrastructure.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Alsync.Infrastructure.Redis\Alsync.Infrastructure.Redis.csproj" />
+  </ItemGroup>
 
 </Project>
