Configure redis configuration.

--- a/Alsync.Api/appsettings.json
+++ b/Alsync.Api/appsettings.json
@@ -18,6 +18,9 @@
     },
     "Signature": ""
   },
+  "Redis": {
+    "Configuration": "127.0.0.1, password = 123456, DefaultDatabase = 0"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
