--- a/Alsync.Api/Alsync.Api.csproj
+++ b/Alsync.Api/Alsync.Api.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\Alsync.Application\Alsync.Application.csproj" />
     <ProjectReference Include="..\Alsync.Domain.Repositories\Alsync.Domain.Repositories.csproj" />
     <ProjectReference Include="..\Alsync.IApplication\Alsync.IApplication.csproj" />
+    <ProjectReference Include="..\Alsync.Infrastructure.Caching.Redis\Alsync.Infrastructure.Caching.Redis.csproj" />
     <ProjectReference Include="..\Alsync.Infrastructure.Mvc\Alsync.Infrastructure.Mvc.csproj" />
   </ItemGroup>
 
