--- a/Alsync.Api/appsettings.json
+++ b/Alsync.Api/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=Alsync; Trusted_Connection=True;"
+    //"DefaultConnection": "Server=localhost; Database=Alsync; Trusted_Connection=True;"
+    "DefaultConnection": "Server=192.168.222.133; Database=Alsync; Uid=root; Pwd=123456;"
   },
   "Jwt": {
     "Header": {
