--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,6 @@ services:
     build:
       context: ./Alsync.Web
       dockerfile: Dockerfile
+    ports: 
+      - "5000:80"
+    container_name: alsync.web
