Update nuget extensions version.

--- a/Alsync.Domain/Alsync.Domain.csproj
+++ b/Alsync.Domain/Alsync.Domain.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Alsync.Infrastructure\Alsync.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
