Add antileech middleware.

--- a/Alsync.Web/Alsync.Web.csproj
+++ b/Alsync.Web/Alsync.Web.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Alsync.Infrastructure.Mvc\Alsync.Infrastructure.Mvc.csproj" />
+  </ItemGroup>
+
 </Project>
