--- a/Alsync.Api.V2/Alsync.Api.V2.csproj
+++ b/Alsync.Api.V2/Alsync.Api.V2.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\Projects\alsync\Alsync.Api.V2\Alsync.Api.V2.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
