--- a/Alsync.Api.V2/Alsync.Api.V2.csproj
+++ b/Alsync.Api.V2/Alsync.Api.V2.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Projects\alsync\Alsync.Api.V2\Alsync.Api.V2.xml</DocumentationFile>
+    <DocumentationFile>Alsync.Api.V2.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
